--- a/styles.css
+++ b/styles.css
@@ -1,7 +1,13 @@
 .big {
     display: flex;
-    flex-direction: column;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
     width: 1920px;
     height: 1080px;
 }
 
+.refresh {
+    display: block;
+    margin: auto;
+}
